2008-12-03  Sergey Poznyakoff  <gray@gnu.org.ua>

	* testsuite/etc/mailutils.rc.in: New file.
	* testsuite/etc/DISTFILES: Add mailutils.rc.in
	* testsuite/lib/mailutils.exp (mu_copy_file): Define $arg
	variable to simplify using $ in template files.
	
	* sieve/testsuite/lib/sieve.exp (SIEVE_ETC_DIR): New global
	(sieve_test): Explicitly pass -f.
	Use SIEVE_ETC_DIR/mailutils.rc as configuration file.
	
	* imap4d/testsuite/imap4d/list.exp: Update the '*' test to match 
	new contents of $MU_DATA_DIR/etc
	* libproto/pop/url.c (_url_pop_init): Remove obsolete call to
	mu_url_init.
	* sieve/sieve.c (sieve_mailbox): Print actual mailbox URL in case
	of failure.

2008-11-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* include/mailutils/opool.h (mu_opool_set_bucket_size)
	(mu_opool_get_bucket_size): New protos.
	* mailbox/opool.c (struct _mu_opool.bucket_size): New member.
	(alloc_pool, copy_chars): Use opool->bucket_size to set bucket
	size.
	(mu_opool_create): Initialize bucket_size with the default
	value.
	(mu_opool_set_bucket_size,mu_opool_get_bucket_size): New
	functions.

2008-11-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	Add iterator support to opool.
	
	* include/mailutils/opool.h (mu_opool_get_iterator): New function.
	* mailbox/opool.c (mu_opool_get_iterator): New function.
	* mailbox/hdritr.c (hdr_data_dup): Bugfix: notify owner about the
	new iterator.

2008-11-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* auth/sql.c (get_field): NULL value in an optional field is
	equivalent to MU_ERR_NOENT.

2008-11-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/amd.c (_amd_attach_message): Call mu_body_clear_modified
	and mu_message_clear_modified after constructing the message to
	make sure it is not marked as modified.

2008-11-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/argcv.c (quote_transtab): Add vertical tabulation
	character. 

2008-11-15  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/cfg_driver.c (mu_cfg_tree_reduce): Format parse tree