@@ -1,6 +1,6 @@
 /*
    GNU Mailutils -- a suite of utilities for electronic mail
-   Copyright (C) 2004, 2006, 2007 Free Software Foundation, Inc.
+   Copyright (C) 2004, 2006, 2007, 2008 Free Software Foundation, Inc.
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
@@ -23,6 +23,7 @@
 
 #include <iostream>
 #include <string>
+#include <vector>
 #include <mailutils/url.h>
 
 namespace mailutils
@@ -50,7 +51,7 @@ class Url
   std::string getAuth ();
   std::string getHost ();
   std::string getPath ();
-  std::string getQuery ();
+  std::vector<std::string> getQuery ();
 };
 
 }
